--- a/BruteForceEngine/BruteForceEngine.vcxproj
+++ b/BruteForceEngine/BruteForceEngine.vcxproj
@@ -43,12 +43,12 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -82,12 +82,12 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(ProjectDir)\..\ThirdParty\DirectXTex;C:\Program Files %28x86%29\Windows Kits\10\Include\10.0.19041.0\shared;C:\Program Files %28x86%29\Windows Kits\10\Include\10.0.19041.0\um;$(IncludePath)</IncludePath>
-    <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(ProjectDir)\..\ThirdParty\DirectXTex\Bin\Desktop_2019_Win10\x64\Debug;C:\Program Files %28x86%29\Windows Kits\10\Lib\10.0.19041.0\um\x64;</LibraryPath>
+    <IncludePath>$(ProjectDir)\..\ThirdParty\GLTFSDK\Inc;$(ProjectDir)\..\ThirdParty\DirectXTex;C:\Program Files %28x86%29\Windows Kits\10\Include\10.0.19041.0\shared;C:\Program Files %28x86%29\Windows Kits\10\Include\10.0.19041.0\um;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)\..\Built\Out\v143\x64\Debug\GLTFSDK;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(ProjectDir)\..\ThirdParty\DirectXTex\Bin\Desktop_2019_Win10\x64\Debug;C:\Program Files %28x86%29\Windows Kits\10\Lib\10.0.19041.0\um\x64</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(ProjectDir)\..\ThirdParty\DirectXTex;C:\Program Files %28x86%29\Windows Kits\10\Include\10.0.19041.0\shared;C:\Program Files %28x86%29\Windows Kits\10\Include\10.0.19041.0\um;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)\..\ThirdParty\GLTFSDK\Inc;$(ProjectDir)\..\ThirdParty\DirectXTex;C:\Program Files %28x86%29\Windows Kits\10\Include\10.0.19041.0\shared;C:\Program Files %28x86%29\Windows Kits\10\Include\10.0.19041.0\um;$(IncludePath)</IncludePath>
     <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(ProjectDir)\..\ThirdParty\DirectXTex\Bin\Desktop_2019_Win10\x64\Release;C:\Program Files %28x86%29\Windows Kits\10\Lib\10.0.19041.0\um\x64;</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -139,7 +139,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>DirectXTex.lib;d3d12.lib;dxgi.lib;dxguid.lib;d3dCompiler.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>DirectXTex.lib;d3d12.lib;dxgi.lib;dxguid.lib;d3dCompiler.lib;GLTFSDK.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <FxCompile>
       <ShaderModel>5.1</ShaderModel>
@@ -180,6 +180,7 @@
     <ClCompile Include="EngineGpuSwapChainDX12.cpp" />
     <ClCompile Include="GameEnvironment.cpp" />
     <ClCompile Include="IndexedGeometryCube.cpp" />
+    <ClCompile Include="IndexedGeometryLoader.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="RenderInstanced.cpp" />
     <ClCompile Include="RenderTerrain.cpp" />
