--- a/BruteForceEngine/BruteForceEngine.vcxproj.filters
+++ b/BruteForceEngine/BruteForceEngine.vcxproj.filters
@@ -325,5 +325,6 @@
     <None Include="LightScattering.hlsli">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
